hphp/hack/test/typecheck/generics_restrictions/covariant_in_where_good.php.like_types.exp
File "covariant_in_where_good.php", line 9, characters 20-47:
Invalid argument (Typing[4110])
File "covariant_in_where_good.php", line 5, characters 39-39:
Expected ~[unresolved] because it is an unenforceable type
File "covariant_in_where_good.php", line 9, characters 20-47:
But got vec<~Tu>
File "covariant_in_where_good.php", line 12, characters 20-47:
Invalid argument (Typing[4110])
File "covariant_in_where_good.php", line 5, characters 39-39:
Expected ~[unresolved] because it is an unenforceable type
File "covariant_in_where_good.php", line 12, characters 20-47:
But got vec<~Tu>
File "covariant_in_where_good.php", line 15, characters 20-47:
Invalid argument (Typing[4110])
File "covariant_in_where_good.php", line 5, characters 39-39:
Expected ~[unresolved] because it is an unenforceable type
File "covariant_in_where_good.php", line 15, characters 20-47:
But got vec<~Tu>
